fix option text wrap

--- a/src/home.css
+++ b/src/home.css
@@ -1,180 +1,186 @@
 html,
 body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%;
-    color: #585858;
-    border: 0;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  color: #585858;
+  border: 0;
 }
 
 .icontainer {
-    font-size: 18px;
-    background: #FAFAFA;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+  font-size: 18px;
+  background: #fafafa;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 .box {
-    background: #ffffff;
-    max-width: 1250px;
-    margin: 20px;
-    display: flex;
-    box-shadow: 2px 4px 8px rgba(102, 162, 222, 0.15);
+  background: #ffffff;
+  max-width: 1250px;
+  margin: 20px;
+  display: flex;
+  box-shadow: 2px 4px 8px rgba(102, 162, 222, 0.15);
 }
 
 .left {
-    background: linear-gradient(to bottom left, #02B3A4, #66A2DE);
-    padding: 40px;
-    width: 450px;
-    color: #ffffff;
-    display: flex;
-    align-items: center;
-    align-content: center;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    font-size: 20px;
-    font-family: 'Benton Sans', Arial, Helvetica, sans-serif;
+  background: linear-gradient(to bottom left, #02b3a4, #66a2de);
+  padding: 40px;
+  width: 450px;
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  font-size: 20px;
+  font-family: 'Benton Sans', Arial, Helvetica, sans-serif;
 }
 
 .right {
-    padding: 40px;
-    display: flex;
-    align-items: center;
-    align-content: center;
-    justify-content: flex-start;
-    flex-wrap: wrap;
+  padding: 40px;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
 
 .iheader {
-    font-size: 64px;
-    font-family: 'Bookman Old Style', Arial, Helvetica, sans-serif;
-    margin: 10px 0px;
-    line-height: 54px;
+  font-size: 64px;
+  font-family: 'Bookman Old Style', Arial, Helvetica, sans-serif;
+  margin: 10px 0px;
+  line-height: 54px;
 }
 
 .big {
-    font-size: 28px;
-    width: 100%;
-    margin: 5px 0px;
+  font-size: 28px;
+  width: 100%;
+  margin: 5px 0px;
 }
 
 a {
-    color: #02B3A4;
-    font-weight: bold;
-    text-decoration: none;
+  color: #02b3a4;
+  font-weight: bold;
+  text-decoration: none;
 }
 
 a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .gh {
-    font-size: 16px;
-    text-align: center;
-    width: 100%;
+  font-size: 16px;
+  text-align: center;
+  width: 100%;
 }
 
 .container {
-    padding: 0;
+  padding: 0;
 }
 
 .container > div:first-child {
-    overflow-y: auto;
-    overflow-x: hidden;
-    padding: 0 18px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding: 0 18px;
 }
 
 .footer {
-    padding: 0 18px;
+  padding: 0 18px;
 }
 
 .footer .btncluster {
-    margin-top: 12px;
+  margin-top: 12px;
 }
 
 .picky {
-    padding: 0 4px;
-    box-sizing: border-box;
+  padding: 0 4px;
+  box-sizing: border-box;
 }
 
 .picky .selected {
-    margin-left: 0;
-    /* justify-content: left; */ /* not supported in tableau 2018.3 */
+  margin-left: 0;
+  /* justify-content: left; */ /* not supported in tableau 2018.3 */
 }
 
 .picky__input {
-    padding: 0 5px;
-    height: 20px;
-    font-size: 8pt;
-    border-color: #cccccc;
+  padding: 0 5px;
+  height: 20px;
+  font-size: 8pt;
+  border-color: #cccccc;
 }
 
 .picky__input:focus {
-    outline: 0 !important
+  outline: 0 !important;
 }
 
 .picky__input span {
-    width: calc(100% - 11px);
-    height: 100%;
-    border-right: 1px solid #e6e6e6;
-    display: flex;
-    align-items: center;
-    color: #4a4a4a;
+  width: calc(100% - 11px);
+  height: 100%;
+  border-right: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+  color: #4a4a4a;
 }
 
 .picky__input::after {
-    border-top: 4px solid #333333;
-    right: 5px;
-    top: 8px;
+  border-top: 4px solid #333333;
+  right: 5px;
+  top: 8px;
 }
 
 .picky__filter__input {
-    border: 1px solid #e6e6e6;
-    border-right: 0;
-    border-top: 0;
-    height: 20px;
-    font-size: 8pt;
-    border-radius: 0;
+  border: 1px solid #e6e6e6;
+  border-right: 0;
+  border-top: 0;
+  height: 20px;
+  font-size: 8pt;
+  border-radius: 0;
 }
 
 .picky__filter {
-    padding: 0;
+  padding: 0;
 }
 
 .picky__filter__input:focus {
-    outline: 0 !important;
+  outline: 0 !important;
 }
 
 .picky__dropdown {
-    top: 20px;
-    left: 3px;
-    width: calc(100% - 7px);
+  top: 20px;
+  left: 3px;
+  width: calc(100% - 7px);
 }
 
-.picky__dropdown .option, .picky__dropdown li {
-    padding: 0;
-    margin: 0;
-    font-size: 8pt;
-    min-height: auto;
-    border: 0;
-    /* display: flex; */ /* not supported in tableau 2018.3 */
-    display: block;
+.picky__dropdown .option,
+.picky__dropdown li {
+  padding: 0;
+  margin: 0;
+  font-size: 8pt;
+  min-height: auto;
+  border: 0;
+  /* display: flex; */ /* not supported in tableau 2018.3 */
+  display: block;
+  white-space: nowrap;
 }
 
-.picky__dropdown .option:focus, .picky__dropdown li:focus {
-    outline: 0 !important;
+.picky__dropdown .option:focus,
+.picky__dropdown li:focus {
+  outline: 0 !important;
 }
 
 .height-text-field input {
-    border-top: 0;
-    border-right: 0;
-    border-left: 0;
-    padding: 0;
+  border-top: 0;
+  border-right: 0;
+  border-left: 0;
+  padding: 0;
 }
 
-.picky__dropdown .option.selected, .picky__dropdown .option:hover, .picky__dropdown li.selected, .picky__dropdown li:hover {
-    background-color: transparent;
+.picky__dropdown .option.selected,
+.picky__dropdown .option:hover,
+.picky__dropdown li.selected,
+.picky__dropdown li:hover {
+  background-color: transparent;
 }
